--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "grunt-svn-tag",
   "description": "Automate tagging svn working copies.",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://github.com/iVantage/grunt-svn-tag",
   "author": {
-    "name": "Justin",
+    "name": "jtrussell",
     "email": "jus.russell@gmail.com",
     "url": "jrussell.me"
   },
@@ -37,6 +37,7 @@
   ],
   "dependencies": {
     "shelljs": "~0.2.6",
-    "findup-sync": "~0.1.2"
+    "findup-sync": "~0.1.2",
+    "svn-info": "~0.1.1"
   }
 }
