--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.6.0",
-    "grunt": "~0.4.0rc7"
+    "grunt": "~0.4.0rc7",
+    "grunt-bump": "0.0.13"
   },
   "keywords": [
     "gruntplugin"
