--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "shelljs": "~0.2.6",
     "findup-sync": "~0.1.2",
-    "svn-project-root": "^0.1.0"
+    "svn-project-root": "^0.1.0",
+    "svn-info": "^0.2.1"
   }
 }
