--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-svn-tag",
   "description": "Automate tagging svn working copies.",
-  "version": "0.7.1",
+  "version": "0.8.0",
   "homepage": "https://github.com/iVantage/grunt-svn-tag",
   "author": {
     "name": "jtrussell",
@@ -26,7 +26,7 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt"
   },
   "devDependencies": {
     "grunt": "~0.4.0rc7",
